försökte göra med mynt men tog bort

--- a/IbrahimRymdspel/IbrahimRymdspel.csproj
+++ b/IbrahimRymdspel/IbrahimRymdspel.csproj
@@ -41,7 +41,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Game1.cs" />
+    <Compile Include="..\..\..\..\Google Drive\programering 2\Game1.cs">
+      <Link>Game1.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
